# benchmark_nlpmp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: benchmark_laptop.yaml
launch/: benchmark_laptop.launch  benchmark_laptop.rviz  benchmark_nlpmp.rviz
src/: benchmark_laptop.cpp
